# bar

./: .clang-format  .clang-tidy  CMakeLists.txt  conanfile.txt  meson.build  meson_options.txt
include/: arc.hxx  bar.hxx  bottle.hxx  entry.hxx  header.hxx  opener.hxx  sys.hxx
src/: cmd.hxx  fmt.hxx  main.cxx
src/sad/: progress.hxx  sad.hxx
subprojects/: barkeep.wrap
tests/: main.cxx  meson.build
tests/fs/: fs.cxx  meson.build
tests/io/: io.cxx  meson.build
